feat: parallel daisy books

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -389,5 +389,6 @@
 	"Clear download queue": "Clear download queue",
 	"Check Data Updates": "Check Data Updates",
 
-	"Install": "Install"
+	"Install": "Install",
+	"Books counter": "Books counter"
 }
