--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -404,5 +404,6 @@
 	"Check Data Updates": "Проверить обновления данных",
 
 	"Install": "Установить",
-	"Remove artworks url": "Убрать URL иллюстраций"
+	"Remove artworks url": "Убрать URL иллюстраций",
+	"Books counter": "Счётчик книг"
 }
