feat: luke counter

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -400,5 +400,6 @@
 
 	"Install": "Install",
 	"Books counter": "Books counter",
-	"Choose an effect": "Choose an effect"
+	"Choose an effect": "Choose an effect",
+	"Gate Box": "Gate Box"
 }
