--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -269,7 +269,7 @@
 
 	"ability.wendy.parallel.action.chaosBag": "{{token}} в [chaos-bag-thin]",
 	"ability.wendy.parallel.action.history": "{{token}} [undo] [chaos-bag-thin]",
-	"ability.wendy.parallel.text": "Выберите, какой жетон запечатать\n<b>Пример:</b>\n[bless] в [chaos-bag-thin] - жетон из мешка хаоса\n[bless] [undo] [chaos-bag-thin] - вытянутый жетон последней проверки\nДля напоминания, укажите инициалы врага, где жетон будет запечатан (до 7 символов):",
+	"ability.wendy.parallel.text": "Выберите, какой жетон запечатать\n<b>Пример:</b>\n[bless] в [chaos-bag-thin] - жетон из мешка хаоса\n[bless] [undo] [chaos-bag-thin] - вытянутый жетон последней проверки\nДля напоминания, укажите инициалы карты врага, где жетон будет запечатан (до 7 символов, напр. Упырь):",
 	"ability.wendy.parallel.placeholder": "Враг",
 	"ability.wendy.parallel.title": "Запечатать жетон",
 
