--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -267,7 +267,7 @@
 	"ability.wendy.parallel.action.chaosBag": "{{token}} in [chaos-bag-thin]",
 	"ability.wendy.parallel.action.history": "{{token}} [undo] [chaos-bag-thin]",
 	"ability.wendy.parallel.title": "Seal token",
-	"ability.wendy.parallel.text": "Select the token to seal\nExplanation:\n[bless] in [chaos-bag-thin] - chaos bag token\n[bless] [undo] [chaos-bag-thin] - revealed token from the last test\nFor reminder, specify the initials of the enemy where the token will be sealed (up to 7 characters, e.g. Ghoul):",
+	"ability.wendy.parallel.text": "Select the token to seal\nExplanation:\n[bless] in [chaos-bag-thin] - chaos bag token\n[bless] [undo] [chaos-bag-thin] - revealed token from the last test\nFor reminder, specify the initials of the enemy where the token will be sealed (up to 7 characters, e.g. «Ghoul»):",
 	"ability.wendy.parallel.placeholder": "Enemy",
 
 	"resources.notEnough": "Not enough resources. Required&nbsp;{{count}}, available&nbsp;{{available}}",
