fix: chaos bag translation

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -421,5 +421,6 @@
 	"Install": "Install",
 	"Books counter": "Books counter",
 	"Choose an effect": "Choose an effect",
-	"Gate Box": "Gate Box"
+	"Gate Box": "Gate Box",
+	"Chaos Bag": "Chaos Bag"
 }
