--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -441,5 +441,6 @@
 	"Remove artworks url": "Убрать URL иллюстраций",
 	"Books counter": "Счётчик книг",
 	"Choose an effect": "Выберите эффект",
-	"Gate Box": "Шкатулка врат"
+	"Gate Box": "Шкатулка врат",
+	"Chaos bag": "Мешок хаоса"
 }
