feat: wendy / fix: lucia

--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -270,6 +270,11 @@
 	"ability.wendy.parallel.text": "Select the token to seal\nExplanation:\n[bless] in [chaos-bag-thin] - chaos bag token\n[bless] [undo] [chaos-bag-thin] - revealed token from the last test\nFor reminder, specify the initials of the enemy where the token will be sealed (up to 7 characters, e.g. «Ghoul»):",
 	"ability.wendy.parallel.placeholder": "Enemy",
 	"ability.wendy.parallel.reaction.fail": "No tokens to seal",
+	"ability.wendy.parallel.elderSign.title": "Reveal tokens",
+	"ability.wendy.parallel.elderSign.text": "Select up to 2 [bless] and/or [curse] and reveal them, ignoring their effects",
+	"ability.wendy.parallel.elderSign.selected.title": "Selected tokens",
+	"ability.wendy.parallel.elderSign.selected.text": "Tap to remove",
+	"ability.wendy.parallel.elderSign.confirm.title": "Reveal",
 
 	"ability.fatherMateo.parallel.fastFail": "No available [bless] tokens to seal",
 	"ability.fatherMateo.parallel.sealBless": "{{name}} seals [bless] on {{targetName}}",
