--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -254,11 +254,8 @@
 
 	"ability.kohaku.removeTokens": "{{name}} removes 2 [bless] and 2 [curse] tokens",
 
-	"ability.richard.drawCard": "Card",
-	"ability.richard.gainResource": "",
-	"ability.richard.dealDamage": "Damage",
-	"ability.richard.discoverClue": "Clue",
 	"ability.richard.modal.text": "Choose an effect:\n[card-outline] Draw 1 card\n[resource] Gain 1 resource\n[clue] Discover 1 clue at your location\n[health] Deal 1 damage to an enemy at your location",
+	"ability.richard.action.damage": "{{name}} deals 1 damage to an enemy at his location",
 
 	"ability.luke.gateBox_one": "{{name}} puts {{count}} charge on the Gate Box",
 	"ability.luke.gateBox_many": "{{name}} puts {{count} charge on the Gate Box",
