--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -261,7 +261,7 @@
 	"ability.kohaku.removeTokens": "{{name}} удаляет 2 [bless] и 2 [curse]",
 
 	"ability.richard.modal.text": "Выберите эффект:\n[card-outline] Взять 1 карту\n[resource] Получить 1 ресурс\n[clue] Найти 1 улику в вашей локации\n[health] Нанести 1 рану врагу в вашей локации",
-	"ability.richard.action.damage": "{{name}} наносит {{value}} раны врагу в вашей локации",
+	"ability.richard.action.damage": "{{name}} наносит 1 рану врагу в вашей локации",
 
 	"ability.luke.gateBox_one": "{{name}} кладёт {{count}} заряд на Шкатулку Врат",
 	"ability.luke.gateBox_few": "{{name}} кладёт {{count} заряда на Шкатулку Врат",
