--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -70,8 +70,8 @@
 
 	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное.",
 	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс).",
-	"board.help.special.daniela": "Нажмите на [claws], если враг вас атаковал. Это поменяет значение [elder_sign] для успеншого прохождения проверки.",
-	"board.help.special.kymani": "Нажмите на [exhaust], если в вашей локации есть повёрнутый враг. Это поменяет значение [elder_sign] для успеншого прохождения проверки.",
+	"board.help.special.daniela": "Нажмите на [claws], если враг вас атаковал. Это поменяет значение [elder_sign] для успешного прохождения проверки.",
+	"board.help.special.kymani": "Нажмите на [exhaust], если в вашей локации есть повёрнутый враг. Это поменяет значение [elder_sign] для успешного прохождения проверки.",
 	"board.help.special.preston": "Удерживайте нажатие на счетчике фамильного наследства, чтобы переложить его значение на счётчик ресурсов.",
 	"board.help.special.wendy": "Нажмите на [accessory], чтобы отметить, что вы выложили амулет Венди. Если амулет в игре, значение жетона [elder_sign] будет считаться автоматическим успехом.",
 
