--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -97,16 +97,16 @@
 	"board.help.chaosBag.reference": "Открыть справку по жетонам.",
 	"board.help.chaosBag.cancelToken": "[blocked] - Переключает режимы отмены жетона. Изначально выключен. Повторное нажатие отменяет/игнорирует жетон: жетон вытянут из мешка, но его модификатор не учитывается в итоговом значении проверки, а эффект помечается как отменённый. Повторное нажатие с [effect] отменяет только эффект жетона (текст).",
 
-	"chaosToken.remove.confirm.title_one": "Жетон участвует в проверке",
-	"chaosToken.remove.confirm.title_few": "Жетоны участвуют в проверке",
-	"chaosToken.remove.confirm.title_many": "Жетоны жетонов участвуют в проверке",
+	"chaosToken.remove.confirm.title_one": "Жетон недоступен",
+	"chaosToken.remove.confirm.title_few": "Жетоны недоступны",
+	"chaosToken.remove.confirm.title_many": "Жетоны недоступны",
 	"chaosToken.remove.confirm.subtitle_one": "Удалить жетон?",
 	"chaosToken.remove.confirm.subtitle_few": "Удалить жетоны?",
 	"chaosToken.remove.confirm.subtitle_many": "Удалить жетоны?",
 
-	"chaosToken.remove.confirm.text_one": "Жетон {{token}} участвует в проверке. Его удаление может изменить результат текущей проверки или отменить её",
-	"chaosToken.remove.confirm.text_few": "{{count}} жетона {{token}} участвуют в проверке. Их удаление может изменить результат текущей проверки или отменить её",
-	"chaosToken.remove.confirm.text_many": "{{count}} жетонов {{token}} участвуют в проверке. Их удаление может изменить результат текущей проверки или отменить её",
+	"chaosToken.remove.confirm.text": "Жетон {{token}} участвует в проверке или запечатан. Его удаление может изменить результат текущей проверки или отменить её",
+	"chaosToken.remove.confirm.text_few": "{{count}} жетона {{token}} участвуют в проверке или запечатаны. Их удаление может изменить результат текущей проверки или отменить её",
+	"chaosToken.remove.confirm.text_many": "{{count}} жетонов {{token}} участвуют в проверке или запечатаны. Их удаление может изменить результат текущей проверки или отменить её",
 
 	"chaosToken.remove.confirm.return": "К проверке",
 
@@ -159,9 +159,9 @@
 	"resources.get_few": "{{name}} получает {{count}} ресурса",
 	"resources.get_many": "{{name}} получает {{count}} ресурсов",
 
-	"damage.take_one": "{{name}} получает {{count}} урон",
-	"damage.take_few": "{{name}} получает {{count}} урона",
-	"damage.take_many": "{{name}} получает {{count}} урона",
+	"damage.take_one": "{{name}} получает {{count}} рану",
+	"damage.take_few": "{{name}} получает {{count}} раны",
+	"damage.take_many": "{{name}} получает {{count}} ран",
 
 	"horror.take_one": "{{name}} получает {{count}} ужас",
 	"horror.take_few": "{{name}} получает {{count}} ужаса",
@@ -219,14 +219,17 @@
 
 	"chaosBag.sealToken": "{{name}} запечатывает жетон {{token}}",
 	"chaosBag.unseal.moon.title": "Снять печать с [moon]?",
-	"chaosBag.unseal.moon.text": "Для снятия печати, необходимо добавить сыщику 1 урон [health] или 1 ужас [sanity]",
-	"chaosBag.unseal.moon.damage.text": "+1 урон",
+	"chaosBag.unseal.moon.text": "Для снятия печати, необходимо добавить сыщику 1 рану [health] или 1 ужас [sanity]",
+	"chaosBag.unseal.moon.damage.text": "+1 рана",
 	"chaosBag.unseal.moon.horror.text": "+1 ужас",
+	"chaosBag.unseal.moon.notAllowed": "У сыщика недостаточно здоровья или рассудка, чтобы снять печать с [moon]",
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
 	"timing.step.name": "Шаг {{name}}",
 
 	"chaosToken.curse.effect": "{{value}}. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [curse] в мешок хаоса, верните его в резерв жетонов",
 	"chaosToken.bless.effect": "{{value}}. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [bless] в мешок хаоса, верните его в резерв жетонов",
+	"chaosToken.moon.effect": "Запечатайте этот жетон на карте вашего сыщика и вытяните ещё один жетон.",
+
 	"chaosToken.frost.first.effect": "{{value}}. Вытяните ещё один жетон",
 	"chaosToken.frost.second.effect": "Проверка автоматически провалена",
 	"chaosToken.autoFail.effect": "Проверка автоматически провалена",
