--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -228,7 +228,7 @@
 
 	"chaosToken.curse.effect": "{{value}}. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [curse] в мешок хаоса, верните его в резерв жетонов",
 	"chaosToken.bless.effect": "{{value}}. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [bless] в мешок хаоса, верните его в резерв жетонов",
-	"chaosToken.moon.effect": "Запечатайте этот жетон на карте вашего сыщика и вытяните ещё один жетон.",
+	"chaosToken.moon.effect": "{{value}}. Запечатайте этот жетон на карте вашего сыщика и вытяните ещё один жетон.",
 
 	"chaosToken.frost.first.effect": "{{value}}. Вытяните ещё один жетон",
 	"chaosToken.frost.second.effect": "Проверка автоматически провалена",
