--- a/assets/i18n/core/en.json
+++ b/assets/i18n/core/en.json
@@ -456,5 +456,7 @@
 	"Books counter": "Books counter",
 	"Choose an effect": "Choose an effect",
 	"Gate Box": "Gate Box",
-	"Chaos Bag": "Chaos Bag"
+	"Chaos Bag": "Chaos Bag",
+	"Difficulty picker": "Difficulty picker",
+	"Odds": "Odds"
 }
