--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -480,5 +480,7 @@
 	"Books counter": "Счётчик книг",
 	"Choose an effect": "Выберите эффект",
 	"Gate Box": "Шкатулка врат",
-	"Chaos bag": "Мешок хаоса"
+	"Chaos bag": "Мешок хаоса",
+	"Difficulty picker": "Сложность проверки",
+	"Odds": "Вероятности"
 }
