fix: reference rename

--- a/assets/i18n/core/ru.json
+++ b/assets/i18n/core/ru.json
@@ -480,5 +480,6 @@
 	"Books counter": "Счётчик книг",
 	"Choose an effect": "Выберите эффект",
 	"Gate Box": "Шкатулка врат",
-	"Chaos bag": "Мешок хаоса"
+	"Chaos bag": "Мешок хаоса",
+	"Scenario Reference": "Памятка сценария"
 }
